--- a/email/src/main/resources/application.properties
+++ b/email/src/main/resources/application.properties
@@ -12,6 +12,6 @@ broker.queue.email.name=default.email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=gbiel3mira@gmail.com
-spring.mail.password=ewii dmae wxxh prux
+spring.mail.password=**** **** **** ****
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
